<resources>
    <string name="app_name">FunMate</string>

    <!--splash activity-->
    <string name="developed_by">Sergen KOCA tarafında geliştirildi</string>

    <!--login activity-->
    <string name="email">Eposta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="not_yet_account">Hesabın yok mu? Kayıt Ol</string>
    <string name="need_email">eposta gerekli</string>
    <string name="need_password">şifre gerekli</string>
    <string name="login_with_google">Google hesabın ile giriş yapabilirsin</string>
    <string name="google_sign_in_error">Google İle Giriş Başarısız</string>
    <string name="auth_error">Yetkilendirme Hatası</string>

    <!--register activity-->
    <string name="flname">İsim ve Soyisim</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="already_account">Zaten hesabın var mı? Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="need_flname">isim ve soyisim gerekli</string>
    <string name="need_username">kullanıcı adı gerekli</string>
    <string name="need_password_again">şifre onayı gerekli gerekli</string>

    <!--main activity-->
    <string name="profil">Profil</string>
    <string name="activities">Aktiviteler</string>
    <string name="messages">Mesajlar</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>



</resources>
