<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ac_flnametxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/flname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ac_usernametxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ac_emailtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ac_passwordtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_ac_password_againtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_again" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_ac_registerbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#fff"
                android:background="#fff"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:defaultFocusHighlightEnabled="true"
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"></Button>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/register_ac_logintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/already_account"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"></TextView>
</RelativeLayout>